deploy/develop/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: red
spec:
  selector:
    matchLabels:
      app: red
  replicas: 1
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: red
      annotations:
        telepresence.getambassador.io/inject-traffic-agent: enabled
    spec:
      imagePullSecrets:
        - name: registry-auth
      restartPolicy: Always
      containers:
        - resources:
            requests: {}
            limits:
              cpu: 250m
              memory: 250M
          imagePullPolicy: Always
          image: docker.pkg.github.com/gitops-remote-dev/red/red:latest
          name: red
          ports:
            - name: web
              containerPort: 8080
          # envFrom:
          #   - configMapRef:
          #       name: red-config
